[build-system]
requires = ["build", "wheel","setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name="campubtest"
requires-python=">=3.12"
version="0.0.7"
description = "Orelogy package to dilute resource block models"
dependencies=[
  "build",
  "setuptools",
  "setuptools_scm",
  "wheel"
]

[project.scripts]
greet = "campubtestpip.__main__:main"