[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="campubtestpip"
requires-python=">=3.12"
version="0.0.8"
description = "Orelogy package to dilute resource block models"
dependencies=[
  "build",
  "setuptools",
  "setuptools_scm",
  "wheel"
]
readme = "README.md"

[project.scripts]
greet = "campubtestpip.__main__:main"